--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,10 @@ a {
   font-size: 12px;
 }
 
+.tm-mobile-header .hd-con-red {
+  background: #f32d2d;
+}
+
 #banner {
   width: 100%;
 }
@@ -742,4 +746,182 @@ a {
 .qijian_con .floor1 .bottom .shop-info .shop-desc {
   color: #9b9b9b;
   font-size: 12px;
+}
+
+.page1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  /*width:100%;
+  height:100%;*/
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 999;
+}
+
+.page1 .content {
+  width: 6.53rem;
+  height: 100%;
+  display: block;
+  background: #ccc;
+  position: relative;
+  transition: left 1s ease .1s;
+  left: -6.53rem;
+}
+
+.page1 .content .tab-header {
+  background: #eee;
+  height: 43px;
+  border-bottom: 1px solid #E1E1E1;
+}
+
+.page1 .content .tab-header h1 {
+  font-weight: 400;
+  float: left;
+  width: 23%;
+  text-align: center;
+  line-height: 44px;
+  color: #333;
+  font-size: 14px;
+}
+
+.page1 .content .tab-content {
+  position: absolute;
+  top: 44px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.page1 .content .tab-content .tab-nav {
+  background: #EEE;
+  color: #9B9B9B;
+  font-size: 14px;
+  text-align: center;
+  float: left;
+  width: 23%;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.page1 .content .tab-content .tab-nav li {
+  line-height: 1.13rem;
+  border-bottom: 1px solid #E1E1E1;
+  margin-right: -1px;
+}
+
+.page1 .content .tab-content .tab-nav li:last-child {
+  border-bottom: 0;
+  margin-bottom: 0;
+}
+
+.page1 .content .tab-content .tab-nav li.active {
+  background-color: #fff;
+}
+
+.page1 .content .tab-content .tab-menu {
+  float: left;
+  width: 77%;
+  height: 100%;
+  background: #fff;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul {
+  position: relative;
+  height: 100%;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .tab-li {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 4%;
+  background-color: #fff;
+  height: 100%;
+  box-sizing: border-box;
+  display: none;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .tab-li .tab-list h2 {
+  font-size: 14px;
+  line-height: 14px;
+  color: #9B9B9B;
+  padding: 15px 0;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .tab-li .tab-list ul {
+  overflow: hidden;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .tab-li .tab-list ul li {
+  float: left;
+  width: 33.33333%;
+  margin: 5px 0;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .tab-li .tab-list ul li a {
+  position: relative;
+  display: block;
+  text-decoration: none;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .tab-li .tab-list ul li a .tab-img {
+  width: 76%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .tab-li .tab-list ul li a .tab-img img {
+  width: 100%;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .tab-li .tab-list ul li a .logo {
+  margin: 10px auto;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .tab-li .tab-list ul li a p.tab-desc {
+  width: 100%;
+  display: block;
+  line-height: 23px;
+  height: 23px;
+  padding: 4px 0;
+  font-size: 14px;
+  color: #5D5D5D;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0;
+}
+
+.page1 .content .tab-content .tab-menu .tab-ul .active {
+  display: block;
+}
+
+.page1 .move {
+  left: 0;
+}
+
+.page1 p.back {
+  width: 15px;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  margin: -54px 0 0 0;
+  font-size: 14px;
+  line-height: 14px;
+  color: #B5B5B5;
+}
+
+.page1 p.back span {
+  background: url("../imgs/page1_back.png") center center no-repeat;
+  display: block;
+  width: 15px;
+  height: 15px;
+  margin: 10px 0 0;
+  background-size: 100%;
 }
