--- a/css/style.scss
+++ b/css/style.scss
@@ -82,6 +82,9 @@ a {
       }
     }
   }
+  .hd-con-red {
+    background: #f32d2d;
+  }
 }
 
 //banner部分
@@ -136,7 +139,7 @@ a {
 //tm_hot
 .tm_hot {
   padding: 0.23rem;
-  padding-right:0;
+  padding-right: 0;
   box-sizing: border-box;
   .left {
     width: 1.32rem;
@@ -480,7 +483,7 @@ a {
   .floor1 {
     background-color: #fff;
     overflow: hidden;
-    border-bottom:1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0;
     a {
       width: 50%;
       float: left;
@@ -530,7 +533,7 @@ a {
       float: left;
       border-right: 1px solid #f0f0f0;
       box-sizing: border-box;
-      text-align:center;
+      text-align: center;
       background-color: #fff;
       .title {
         font-size: 13px;
@@ -542,18 +545,18 @@ a {
         font-size: 12px;
         margin-top: 0.12rem;
       }
-      .img-con{
-        width:1.5rem;
-        height:1.5rem;
-        float:left;
-        margin:0.13rem;
-        img{
+      .img-con {
+        width: 1.5rem;
+        height: 1.5rem;
+        float: left;
+        margin: 0.13rem;
+        img {
           width: 100%;
         }
       }
     }
-    a:last-child{
-      border:0;
+    a:last-child {
+      border: 0;
     }
   }
 }
@@ -565,64 +568,223 @@ a {
     border-color: #2f2f2f;
   }
 }
-.qijian_con{
+
+.qijian_con {
   overflow: hidden;
-  .floor1{
-    width:50%;
+  .floor1 {
+    width: 50%;
     float: left;
-    .top{
-      width:100%;
+    .top {
+      width: 100%;
       overflow: hidden;
-      a{
-        float:left;
-        width:1.13rem;
-        img{
-          width:100%;
-          float:left;
+      a {
+        float: left;
+        width: 1.13rem;
+        img {
+          width: 100%;
+          float: left;
         }
       }
-      a.one{
+      a.one {
         float: left;
-        width:2.3rem;
-        margin-right:1px;
-        margin-left:0.1rem;
+        width: 2.3rem;
+        margin-right: 1px;
+        margin-left: 0.1rem;
       }
-      a.three{
-        margin-top:1px;
+      a.three {
+        margin-top: 1px;
       }
     }
-    .bottom{
-      margin-top:0.05rem;
-      width:100%;
+    .bottom {
+      margin-top: 0.05rem;
+      width: 100%;
       overflow: hidden;
       background-color: #fff;
-      .shop-logo-con{
-        width:0.5rem;
-        height:0.5rem;
+      .shop-logo-con {
+        width: 0.5rem;
+        height: 0.5rem;
         float: left;
-        margin-left:0.1rem;
-        img{
-          width:100%;
-          height:100%;
+        margin-left: 0.1rem;
+        img {
+          width: 100%;
+          height: 100%;
         }
       }
-      .shop-info{
-        width:2.24rem;
-        float:left;
-        margin-left:0.12rem;
+      .shop-info {
+        width: 2.24rem;
+        float: left;
+        margin-left: 0.12rem;
 
-        .shop-name{
-          color:#2f2f2f;
-          font-size:12px;
-          height:12px;
+        .shop-name {
+          color: #2f2f2f;
+          font-size: 12px;
+          height: 12px;
           line-height: 12px;
           overflow: hidden;
         }
-        .shop-desc{
-          color:#9b9b9b;
-          font-size:12px;
+        .shop-desc {
+          color: #9b9b9b;
+          font-size: 12px;
         }
       }
+    }
+  }
+}
+
+//page1
+.page1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  /*width:100%;
+  height:100%;*/
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, .7);
+  z-index: 999;
+  .content {
+    width: 6.53rem;
+    height: 100%;
+    display: block;
+    background: #ccc;
+    position: relative;
+    transition:left 1s ease .1s;
+    .tab-header {
+      background: #eee;
+      height: 43px;
+      border-bottom: 1px solid #E1E1E1;
+      h1 {
+        font-weight: 400;
+        float: left;
+        width: 23%;
+        text-align: center;
+        line-height: 44px;
+        color: #333;
+        font-size: 14px;
+      }
+    }
+    .tab-content {
+      position: absolute;
+      top: 44px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      .tab-nav {
+        background: #EEE;
+        color: #9B9B9B;
+        font-size: 14px;
+        text-align: center;
+        float: left;
+        width: 23%;
+        height: 100%;
+        overflow-y: auto;
+        overflow-x: hidden;
+        li {
+          line-height: 1.13rem;
+          border-bottom: 1px solid #E1E1E1;
+          margin-right: -1px;
+        }
+        li:last-child {
+          border-bottom: 0;
+          margin-bottom: 0;
+        }
+        li.active {
+          background-color: #fff;
+        }
+      }
+      .tab-menu {
+        float: left;
+        width: 77%;
+        height: 100%;
+        background: #fff;
+        overflow-y: auto;
+        overflow-x: hidden;
+        .tab-ul {
+          position: relative;
+          height:100%;
+          .tab-li {
+            position: absolute;
+            top: 0;
+            left: 0;
+            padding: 10px 4%;
+            background-color: #fff;
+            height: 100%;
+            box-sizing: border-box;
+            display:none;
+            .tab-list {
+              h2 {
+                font-size: 14px;
+                line-height: 14px;
+                color: #9B9B9B;
+                padding: 15px 0;
+              }
+              ul {
+                overflow: hidden;
+                li {
+                  float: left;
+                  width: 33.33333%;
+                  margin: 5px 0;
+                  a {
+                    position: relative;
+                    display: block;
+                    text-decoration: none;
+                    .tab-img {
+                      width: 76%;
+                      margin: 0 auto;
+                      position: relative;
+                      img {
+                        width: 100%;
+                      }
+                    }
+                    .logo {
+                      margin: 10px auto;
+                    }
+                    p.tab-desc {
+                      width: 100%;
+                      display: block;
+                      line-height: 23px;
+                      height: 23px;
+                      padding: 4px 0;
+                      font-size: 14px;
+                      color: #5D5D5D;
+                      text-align: center;
+                      white-space: nowrap;
+                      overflow: hidden;
+                      text-overflow: ellipsis;
+                      margin: 0;
+                    }
+                  }
+                }
+              }
+            }
+          }
+          .active{
+            display:block;
+          }
+        }
+      }
+    }
+    left:-6.53rem;
+  }
+  .move{
+    left:0;
+  }
+  p.back {
+    width: 15px;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin: -54px 0 0 0;
+    font-size: 14px;
+    line-height: 14px;
+    color: #B5B5B5;
+    span {
+      background: url("../imgs/page1_back.png") center center no-repeat;
+      display: block;
+      width: 15px;
+      height: 15px;
+      margin: 10px 0 0;
+      background-size: 100%;
     }
   }
 }
