--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,11 @@ body {
   font-size: 16px;
   font-family: "Helvetica", "微软雅黑";
   color: #999;
+  background-color: #fff;
+}
+
+.bg {
+  background-color: #fff;
 }
 
 a {
@@ -752,12 +757,12 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  /*width:100%;
-  height:100%;*/
+  /*width:100vh;
+  height:100vh;*/
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.7);
-  z-index: 999;
+  z-index: -1;
 }
 
 .page1 .content {
@@ -766,8 +771,8 @@ a {
   display: block;
   background: #ccc;
   position: relative;
-  transition: left 1s ease .1s;
-  left: -6.53rem;
+  transition: transform 1s ease .1s;
+  transform: translate3d(-100%, 0, 0);
 }
 
 .page1 .content .tab-header {
@@ -903,7 +908,7 @@ a {
 }
 
 .page1 .move {
-  left: 0;
+  transform: translate3d(0, 0, 0);
 }
 
 .page1 p.back {
