--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,11 @@ body {
   font-size: 16px;
   font-family: "Helvetica", "微软雅黑";
   color: #999;
+  background-color:#fff;
+}
+
+.bg{
+  background-color:#fff;
 }
 
 a {
@@ -636,19 +641,20 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  /*width:100%;
-  height:100%;*/
+  /*width:100vh;
+  height:100vh;*/
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, .7);
-  z-index: 999;
+  z-index: -1;
   .content {
     width: 6.53rem;
     height: 100%;
     display: block;
     background: #ccc;
     position: relative;
-    transition:left 1s ease .1s;
+    transition:transform 1s ease .1s;
+    transform:translate3d(-100%,0,0);
     .tab-header {
       background: #eee;
       height: 43px;
@@ -764,10 +770,9 @@ a {
         }
       }
     }
-    left:-6.53rem;
   }
   .move{
-    left:0;
+     transform:translate3d(0,0,0);
   }
   p.back {
     width: 15px;
